added footer and subscribe section

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --text: #333;
   --text-accent: #dc3545;
   --text-white: #fcfcfc;
+  --text-gray: #ddd;
 }
 
 *,
@@ -80,8 +81,73 @@ section.bg-gray {
   margin-right: 1em;
 }
 
+.slick-arrow {
+  display: none !important;
+}
+
+/* subscribe */
+.bg-img {
+  min-height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #141213, #2c2a2b50),
+    url('https://images.pexels.com/photos/1015568/pexels-photo-1015568.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+  color: var(--bg-white);
+  background-size: cover;
+}
+
+/* footer */
+.bg-dark {
+  background-color: var(--bg-dark);
+  color: var(--text-white);
+}
+
+.footer-col a {
+  display: block;
+  color: var(--text-gray);
+  text-decoration: none;
+}
+.footer-col a:hover {
+  text-decoration: underline;
+}
+
+.footer-social {
+  display: flex;
+  align-items: center;
+}
+
+.footer-social a {
+  margin-right: 1em;
+}
+
 @media (max-width: 480px) {
   .card {
     margin: 0;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .footer-col {
+    text-align: center;
+    margin: 0.5em 0;
+  }
+  .footer-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .footer-links a {
+    margin: 0.5em;
+  }
+  .footer-brand {
+    order: -1;
+  }
+  .footer-social {
+    justify-content: center;
+  }
+  .footer-social a {
+    margin: 1em;
   }
 }
