--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --text-accent: #dc3545;
   --text-white: #fcfcfc;
   --text-gray: #ddd;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -39,6 +40,17 @@ section.bg-gray {
   position: relative;
   margin: 0.5em 0;
   padding: 0.3em 0;
+}
+
+.top {
+  position: fixed;
+  bottom: 0.25em;
+  right: 0.25em;
+  font-size: 4em;
+  line-height: 0;
+  background-color: transparent;
+  border: none;
+  color: var(--bg-accent);
 }
 
 .heading-title::after {
