--- a/src/index.css
+++ b/src/index.css
@@ -47,13 +47,6 @@ section.bg-gray {
   background-color: var(--bg-gray);
 }
 
-.heading-title {
-  font-weight: bold;
-  position: relative;
-  margin: 0.5em 0;
-  padding: 0.3em 0;
-}
-
 .top {
   position: fixed;
   bottom: 0.25em;
@@ -63,16 +56,69 @@ section.bg-gray {
   background-color: transparent;
   border: none;
   color: var(--text-accent);
+  animation: shake 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(0, 0);
+  }
+  1.78571% {
+    transform: translate(5px, 0);
+  }
+  3.57143% {
+    transform: translate(0, 0);
+  }
+  5.35714% {
+    transform: translate(5px, 0);
+  }
+  7.14286% {
+    transform: translate(0, 0);
+  }
+  8.92857% {
+    transform: translate(5px, 0);
+  }
+  10.71429% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+.heading-title {
+  display: inline-block;
+  font-weight: bold;
+  position: relative;
+  padding: 0.5em;
+  margin: 1em 0;
+}
+
+.heading-title::after,
+.heading-title::before {
+  content: '';
+  position: absolute;
+  height: 2.5rem;
+  width: 2.5rem;
+  border-top: 0.4rem solid var(--bg-accent);
+  border-left: 0.4rem solid var(--bg-accent);
+}
+
+.heading-title::before {
+  top: 0;
+  left: 0;
 }
 
 .heading-title::after {
-  content: '';
-  position: absolute;
   bottom: 0;
-  left: 0;
-  width: 40px;
-  height: 5px;
-  background-color: var(--bg-accent);
+  right: 0;
+  transform: rotate(180deg);
+}
+
+.subscribe .heading-title::after,
+.subscribe .heading-title::before {
+  border-color: var(--bg-white);
 }
 
 /* navbar */
@@ -85,28 +131,14 @@ section.bg-gray {
   text-transform: uppercase;
 }
 
-/* hero section */
-
-.carousel .carousel-item {
-  min-height: 92vh;
-  object-fit: cover;
-}
-
-.carousel-caption {
-  bottom: 3rem;
-}
-
-.carousel-item img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-height: 100%;
-}
-
 /* cards */
 .card {
   margin-right: 1em;
+  height: 100%;
+}
+
+.card p {
+  margin-bottom: 0;
 }
 
 .slick-arrow {
@@ -118,11 +150,43 @@ section.bg-gray {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 30vh;
+  color: var(--bg-white);
+  background-size: cover;
+}
+
+section.min-vh-100 {
+  padding: 0;
+}
+
+.subscribe {
   background: linear-gradient(135deg, #050505, #1d1c1c50),
     url('https://www.yashrajfilms.com/images/default-source/subscriber-background/subscribe-bg22.jpg?sfvrsn=4')
       center;
-  color: var(--bg-white);
-  background-size: cover;
+}
+
+.contact {
+  background: linear-gradient(135deg, #574d4d, #1d1c1c1f),
+    url('https://coderkube.com/wp-content/uploads/2017/06/top-contact-us-banner.jpg')
+      center;
+}
+
+.about {
+  min-height: 50vh;
+  background: linear-gradient(135deg, #574d4d, #1d1c1c1f),
+    url('https://www.yashrajfilms.com/images/default-source/default-album/about-yrf.jpg?sfvrsn=4')
+      center;
+}
+
+.outlineed-icon {
+  font-size: 1.5em;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  margin-bottom: 1em;
 }
 
 .btn-danger {
@@ -152,13 +216,31 @@ section.bg-gray {
   opacity: 1;
 }
 
+.footer-brand {
+  text-align: right;
+}
+
 .footer-social {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
 
 .footer-social a {
   margin-right: 1em;
+  font-size: 1.5em;
+}
+
+.footer-social a.fb-icon:hover {
+  color: rgb(118, 118, 240);
+}
+
+.footer-social a.twitter-icon:hover {
+  color: rgb(118, 118, 240);
+}
+
+.footer-social a.insta-icon:hover {
+  color: rgb(240, 86, 86);
 }
 
 .btn-accent {
@@ -187,6 +269,7 @@ section.bg-gray {
 }
 
 .btn-outline-danger:hover {
+  border-color: var(--bg-accent);
   background-color: var(--bg-accent);
   opacity: 0.8;
 }
