--- a/src/index.css
+++ b/src/index.css
@@ -47,46 +47,6 @@ section.bg-gray {
   background-color: var(--bg-gray);
 }
 
-.top {
-  position: fixed;
-  bottom: 0.25em;
-  right: 0.25em;
-  font-size: 4em;
-  line-height: 0;
-  background-color: transparent;
-  border: none;
-  color: var(--bg-accent);
-  animation: shake 1s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% {
-    transform: translate(0, 0);
-  }
-  1.78571% {
-    transform: translate(5px, 0);
-  }
-  3.57143% {
-    transform: translate(0, 0);
-  }
-  5.35714% {
-    transform: translate(5px, 0);
-  }
-  7.14286% {
-    transform: translate(0, 0);
-  }
-  8.92857% {
-    transform: translate(5px, 0);
-  }
-  10.71429% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-
 .heading-title {
   display: inline-block;
   font-weight: bold;
@@ -148,7 +108,7 @@ section.bg-gray {
   transition: 0.15s filter ease-in;
 }
 
-.card:hover .card-img-top {
+.card-img-top:hover {
   filter: brightness(0.8);
 }
 
@@ -168,6 +128,10 @@ section.bg-gray {
   min-height: 30vh;
   color: var(--bg-white);
   background-size: cover;
+}
+
+.bg-img .heading-title {
+  color: #ccc;
 }
 
 section.min-vh-100 {
@@ -206,6 +170,32 @@ section.min-vh-100 {
   border: 1px solid #ccc;
   border-radius: 50%;
   margin-bottom: 1em;
+}
+
+.top {
+  position: fixed;
+  bottom: 0.25em;
+  right: 0.25em;
+  font-size: 4em;
+  line-height: 0;
+  background-color: transparent;
+  border: none;
+  color: var(--bg-accent);
+  animation: shake 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .btn-danger {
@@ -307,6 +297,9 @@ section.min-vh-100 {
 @media (max-width: 480px) {
   .card {
     margin: 0;
+  }
+  .nav-brand {
+    padding: 0 !important;
   }
 }
 
