--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@
 
 body {
   line-height: 1.6;
+  background: url('../public/images/blurred-bg.jpg') center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 img {
@@ -44,7 +48,7 @@ section {
 }
 
 section.bg-gray {
-  background-color: var(--bg-gray);
+  background-color: #eee4e454;
 }
 
 .heading-title {
@@ -102,6 +106,7 @@ section.bg-gray {
 .card {
   margin-right: 1em;
   height: 100%;
+  background-color: rgba(253, 253, 247, 0.397);
 }
 
 .card-img-top {
